# contract-explorer

./: README.md  meson.build
.github/: FUNDING.yml
data/: contract-explorer.contract.in  contract-explorer.desktop.in  contract-explorer.metainfo.xml.in  contract-explorer.xml  llc.snow.contract-explorer.plug  meson.build
data/schemas/: llc.snow.contract-explorer.gschema.xml
po/: POTFILES  llc.snow.contract-explorer.pot  meson.build
src/: Application.vala
